--- a/data/fontlink.desktop
+++ b/data/fontlink.desktop
@@ -6,5 +6,6 @@ Icon=fontlink
 Categories=Utility;
 Terminal=false
 Comment=Install fonts temporarily
+Comment[hr]=Instaliraj fontove privremeno
 Comment[ru]=Устанавливайте шрифты временно
 Comment[uk]=Встановлюйте шрифти тимчасово
